--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@typescript-eslint/parser": "^6.7.5",
     "@vue/language-plugin-pug": "^1.8.18",
+    "chart.js": "^4.4.4",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-nuxt": "^4.0.0",
@@ -33,8 +34,9 @@
     "pug": "^3.0.2",
     "sass": "^1.69.1",
     "vite-plugin-vuetify": "^1.0.2",
+    "vue-chartjs": "^5.3.1",
     "vue-content-loader": "^2.0.1",
     "vue-i18n": "^9.5.0",
-    "vuetify": "^3.4.0-alpha.1"
+    "vuetify": "^3.6.0"
   }
 }
