--- a/package.json
+++ b/package.json
@@ -11,32 +11,32 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-throw-expressions": "^7.22.5",
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.4",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "@babel/plugin-proposal-throw-expressions": "^7.24.7",
+    "@nuxt/devtools": "1.5.1",
+    "nuxt": "^3.13.2",
+    "vue": "^3.5.10",
+    "vue-router": "^4.4.5"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.22.15",
-    "@mdi/font": "^7.3.67",
-    "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
-    "@pinia/nuxt": "^0.5.1",
-    "@typescript-eslint/parser": "^6.7.5",
-    "@vue/language-plugin-pug": "^1.8.18",
+    "@babel/eslint-parser": "^7.25.1",
+    "@mdi/font": "^7.4.47",
+    "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
+    "@pinia/nuxt": "^0.5.4",
+    "@typescript-eslint/parser": "^8.7.0",
+    "@vue/language-plugin-pug": "^2.1.6",
     "chart.js": "^4.4.4",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "prettier": "^3.0.3",
-    "pug": "^3.0.2",
-    "sass": "^1.69.1",
-    "vite-plugin-vuetify": "^1.0.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.28.0",
+    "prettier": "^3.3.3",
+    "pug": "^3.0.3",
+    "sass": "^1.79.4",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue-chartjs": "^5.3.1",
     "vue-content-loader": "^2.0.1",
-    "vue-i18n": "^9.5.0",
+    "vue-i18n": "^9.14.1",
     "vuetify": "^3.6.0"
   }
 }
