--- a/package.json
+++ b/package.json
@@ -13,16 +13,18 @@
   "devDependencies": {
     "@babel/plugin-proposal-throw-expressions": "^7.24.7",
     "@nuxt/devtools": "1.5.1",
-    "nuxt": "^3.13.2",
-    "vue": "^3.5.10",
+    "nuxt": "3.6.0",
+    "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "dependencies": {
+    "@babel/core": "^7.11.0",
     "@babel/eslint-parser": "^7.25.1",
     "@mdi/font": "^7.4.47",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.4",
-    "@typescript-eslint/parser": "^8.7.0",
+    "@types/node": "^22.7.9",
+    "@typescript-eslint/parser": "^8.11.0",
     "@vue/language-plugin-pug": "^2.1.6",
     "chart.js": "^4.4.4",
     "eslint": "^9.11.1",
@@ -32,7 +34,10 @@
     "eslint-plugin-vue": "^9.28.0",
     "prettier": "^3.3.3",
     "pug": "^3.0.3",
-    "sass": "^1.79.4",
+    "sass": "^1.80.4",
+    "sass-embedded": "^1.80.4",
+    "typescript": "^5.1.6",
+    "vite": "^5.4.10",
     "vite-plugin-vuetify": "^2.0.4",
     "vue-chartjs": "^5.3.1",
     "vue-content-loader": "^2.0.1",
