--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@babel/core": "^7.11.0",
     "@babel/eslint-parser": "^7.25.1",
-    "@mdi/font": "^7.4.47",
+    "@mdi/font": "7.3.67",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.4",
     "@types/node": "^22.7.9",
@@ -34,7 +34,7 @@
     "eslint-plugin-vue": "^9.28.0",
     "prettier": "^3.3.3",
     "pug": "^3.0.3",
-    "sass": "^1.80.4",
+    "sass": "1.69.1",
     "sass-embedded": "^1.80.4",
     "typescript": "^5.1.6",
     "vite": "^5.4.10",
