--- a/package.json
+++ b/package.json
@@ -5,28 +5,25 @@
   "version": "0.0.1",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev --port 12345",
+    "dev": "nuxt dev --port 7777",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
     "@babel/plugin-proposal-throw-expressions": "^7.24.7",
-    "@nuxt/devtools": "1.5.1",
-    "nuxt": "3.7.4",
+    "@nuxt/devtools": "latest",
+    "nuxt": "^3.7.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "dependencies": {
-    "@babel/core": "^7.11.0",
     "@babel/eslint-parser": "^7.25.1",
     "@mdi/font": "7.3.67",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.4",
-    "@types/node": "^22.7.9",
     "@typescript-eslint/parser": "^8.11.0",
     "@vue/language-plugin-pug": "^2.1.6",
-    "chart.js": "^4.4.4",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-nuxt": "^4.0.0",
@@ -35,11 +32,8 @@
     "prettier": "^3.3.3",
     "pug": "^3.0.3",
     "sass": "1.69.1",
-    "sass-embedded": "^1.80.4",
     "typescript": "^5.1.6",
-    "vite": "^5.4.10",
-    "vite-plugin-vuetify": "^2.0.4",
-    "vue-chartjs": "^5.3.1",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue-content-loader": "^2.0.1",
     "vue-i18n": "^9.14.1",
     "vuetify": "^3.7.3"
