--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdi/font": "7.3.67",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
     "@pinia/nuxt": "^0.5.4",
+    "@popperjs/core": "^2.11.8",
     "@typescript-eslint/parser": "^8.11.0",
     "@vue/language-plugin-pug": "^2.1.6",
     "eslint": "^9.11.1",
@@ -33,6 +34,7 @@
     "pug": "^3.0.3",
     "sass": "1.69.1",
     "typescript": "^5.1.6",
+    "v-calendar": "^3.1.2",
     "vite-plugin-vuetify": "^1.0.2",
     "vue-content-loader": "^2.0.1",
     "vue-i18n": "^9.14.1",
