--- a/package.json
+++ b/package.json
@@ -10,34 +10,24 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
-  "devDependencies": {
-    "@babel/plugin-proposal-throw-expressions": "^7.24.7",
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.7.4",
-    "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
-  },
   "dependencies": {
-    "@babel/eslint-parser": "^7.25.1",
-    "@mdi/font": "7.3.67",
+    "@mdi/font": "^7.4.47",
+    "@nuxt/devtools": "^2.6.3",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.1",
-    "@pinia/nuxt": "^0.5.4",
+    "@pinia/nuxt": "^0.11.2",
     "@popperjs/core": "^2.11.8",
-    "@typescript-eslint/parser": "^8.11.0",
-    "@vue/language-plugin-pug": "^2.1.6",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-nuxt": "^4.0.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.28.0",
-    "prettier": "^3.3.3",
+    "@vue/language-plugin-pug": "^3.0.6",
+    "nuxt": "^4.0.3",
+    "pinia": "^3.0.3",
     "pug": "^3.0.3",
-    "sass": "1.69.1",
-    "typescript": "^5.1.6",
-    "v-calendar": "^3.1.2",
-    "vite-plugin-vuetify": "^1.0.2",
+    "sass": "^1.91.0",
+    "vite-plugin-vuetify": "^2.1.2",
+    "vue": "^3.5.20",
     "vue-content-loader": "^2.0.1",
-    "vue-i18n": "^9.14.1",
-    "vuetify": "^3.7.3"
-  }
+    "vue-i18n": "^11.1.11",
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.9.6"
+  },
+  "devDependencies": {},
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
